==============
lxml changelog
==============

Under development
=================

Features added
--------------

* New incremental XML file writing API ``etree.xmlfile()``.

* E factory in lxml.objectify is callable to simplify the creation of
  tags with non-identifier names without having to resort to getattr().

Bugs fixed
----------

* GH#85: Deprecation warnings were fixed for Python 3.x.

* GH#33: lxml.html.fromstring() failed to accept bytes input in Py3.

* LP#1080792: Static build of libxml2 2.9.0 failed due to missing file.

Other changes
-------------

* The externally useless class ``_ObjectifyElementMakerCaller`` was
  removed from the module API of lxml.objectify.

* LP#1075622: lxml.builder is faster for adding text to elements with
  many children.  Patch by Anders Hammarquist.


3.0.2 (2012-12-14)
==================

Features added
--------------

Bugs fixed
----------

* Fix crash during interpreter shutdown by switching to Cython 0.17.3 for building.

Other changes
-------------


3.0.1 (2012-10-14)
==================

Features added
--------------

Bugs fixed
----------

* LP#1065924: Element proxies could disappear during garbage collection
  in PyPy without proper cleanup.

* GH#71: Failure to work with libxml2 2.6.x.

* LP#1065139: static MacOS-X build failed in Py3.

Other changes
-------------


3.0 (2012-10-08)
================

Features added
--------------

Bugs fixed
----------

* End-of-file handling was incorrect in iterparse() when reading from
  a low-level C file stream and failed in libxml2 2.9.0 due to its
  improved consistency checks.

Other changes
-------------

* The build no longer uses Cython by default unless the generated C files
  are missing.  To use Cython, pass the option "--with-cython".  To ignore
  the fatal build error when Cython is required but not available (e.g. to
  run special setup.py commands that do not actually run a build), pass
  "--without-cython".


3.0beta1 (2012-09-26)
=====================
